# tg_2d_cuda

./: CMakeLists.txt  README.md  advance.cu  advance.h  bndcond.cu  bndcond.h  fluxes.cu  fluxes.h  globals.h  init.cu  init.h  main.cu  output.cu  output.h  reconstr.cu  reconstr.h  tg2d.ipynb  tg_2d_proj.cu
